--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,11 +2,11 @@ server:
   port: 8099
 spring:
   datasource:
-  driver-class-name: com.mysql.cj.jdbc.Driver
-  url: jdbc:mysql://localhost:3306/customer_db?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false
-  username: root
-  password: 199828
+    name: customer_db
+    url: jdbc:mysql://localhost:3306/customer_db?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true&nullCatalogMeansCurrent=true
+    username: root
+    password: 199828
 mybatis-plus:
   #信息输出设置
   configuration:
-  log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
